--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -57,7 +57,7 @@ toc:
       - name: "Problem Setting & Notation"
       - name: "Chain Rule of the 🥬 Divergence & DPI"
       - name: "Deriving the Functional ELBO"
-      - name: "Choosing the \"Coreset\" $$x...$$"
+      - name: "Choosing the \"Coreset\""
       - name: "Application to Continual Learning"
   - name: Comparison to FSVI in the Literature
   - name: The Equality Case and Equivalence Classes
@@ -225,7 +225,7 @@ Most importantly, we consider how FSVI can measure a **predictive** divergence b
 With parameter symmetries, I refer to different parameters that yield the same predictions, which is very common in over-parameterized neural networks:
 think of parameter symmetries like different paths leading to the same destination; they might look different but end up at the same predictions<d-footnote>Thanks to ChatGPT for this analogy! 🤗</d-footnote>.
 
-As a nice example and application, we relate FSVI to training with knowledge distillation and label entropy regularization: potentially more meaningful priors than the ones usually used in Bayesian neural networks<d-footnote>In many papers, an isotropic Gaussian is used because of its simplicity. Indeed, there are better alternatives, see <https://arxiv.org/abs/2102.06571> and <https://arxiv.org/abs/2105.06868>.</d-footnote>. TK links need correction or dcite!
+As a nice example and application, we relate FSVI to training with knowledge distillation and label entropy regularization: potentially more meaningful priors than the ones usually used in Bayesian neural networks<d-footnote>In many papers, an isotropic Gaussian is used because of its simplicity. Indeed, there are better alternatives, see Fortuin et al (2022)<d-cite key="fortuin2022bayesian"></d-cite> and Fortuin (2022)<d-cite key="fortuin2022priors"></d-cite>.</d-footnote>.
 
 ### TL;DR
 
@@ -800,7 +800,7 @@ $$
 where $$\Y... \given \x...$$ are (finite or infinite) sets of samples. That is, we do not only optimize marginal distributions but also joint distributions.
 
 <aside class="l-body box-note" markdown="1">
-For more on the specific differences between marginal and joint objectives, the workshop paper <https://arxiv.org/abs/2205.08766> provides conceptual thoughts in the same light, which builds on the following important works:
+For more on the specific differences between marginal and joint objectives, the workshop paper by Kirsch et al (2022)<d-cite key="kirsch2022marginal"></d-cite> provides conceptual thoughts in the same light, which builds on the following important works:
 
 * "The neural testbed: evaluating joint predictions" by Osband et al, 2022<d-cite key="osband2022neural"></d-cite>
 * "Evaluating high-order predictive distributions in deep learning" by Osband et al, 2022<d-cite key="osband2022evaluating"></d-cite>
