Dark mode fixes

--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -113,6 +113,25 @@ _styles: >
     background-color: #d4f4dd;
     border-left-color: #2bc039;
   }
+  html[data-theme='dark'] d-article .box-note {
+    background-color: #555555;
+    border-left-color: #2980b9;
+  }
+  html[data-theme='dark'] d-article .box-warning {
+    background-color: #7f7f00;
+    border-left-color: #f1c40f;
+  }
+  html[data-theme='dark'] d-article .box-error {
+    background-color: #800000;
+    border-left-color: #c0392b;
+  }
+  html[data-theme='dark'] d-article .box-important {
+    background-color: #006600;
+    border-left-color: #2bc039;
+  }
+  d-article aside * {
+    color: var(--global-text-color) !important;
+  }
   d-article article p {
     text-align: justify;
     text-justify: inter-word;
